# conan-openstudio-ruby

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  FindHomeBrewPackage.cmake  README.md  Ruby.nodynamic.patch  Ruby.patch  Ruby.win.CCI.patch  appveyor.yml  build.py  build_ruby.bat.in  conanfile.py  conanfile.txt  test_openssl_version.rb
.ci/: install.sh  nrel_build.sh  run.cmd  run.sh
.circleci/: config.yml  install.sh  run.sh
.github/workflows/: build.yml
patches/: 0001-patch-to-support-version-ranges-for-MSVC.patch  0002-patch-encoding-CP720.patch  0003-YYUSE.patch  0004-GCC7_8_fix_link_flags.patch  Ruby.lb.patch  Ruby.nodynamic.patch  Ruby.patch  Ruby.util.patch  Ruby.win.272.patch  Ruby.win.CCI.patch  Ruby.win.patch
test_package/: CMakeLists.txt  EmbeddedHelp.hpp  EmbeddedScripting.i  GC_Value.hpp  RubyInterpreter.hpp  conanfile.py  embedded_help.rb  main.cpp  openstudio_cli.rb
test_package/embedded/: CMakeLists.txt  CreateEmbeddedSource.cpp
test_package/test/: test_bundle.rb  test_embedded_help.rb  test_embedded_ruby.rb  test_encodings.rb
test_package/test/bundle/: Gemfile
test_package/test/bundle_git/: Gemfile  test.rb
test_package/test/bundle_no_install/: test.rb
test_package/test/no_bundle/: test.rb
